--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,18 @@
-body {
-  background: orange;
+h1 {
+  background: rgb(178, 238, 203);
+  font-family: sans-serif;
+  font-weight: 900;
+  font-size: large;
+  text-align: center;
+  line-height: 50px;
+  text-decoration: underline;
+  border: 5px solid;
+  margin: 50px 100px;
 }
+
+img {
+  width: 100%;
+  padding: 0%;
+  border: 4px solid;
+}
+  
